--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,9 +20,9 @@ on:
       - 'features/**'
       - 'playwright.config.ts'
       - 'package.json'
-  schedule:
+  #schedule:
     # Run tests daily at 2 AM UTC
-    - cron: '0 2 * * *'
+    #- cron: '0 2 * * *'
   workflow_dispatch:
     inputs:
       test_type:
